<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="streamer">SPORTIFY STREAMER</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="reader">XYZ READER</string>
    <string name="built_bigger">BUILD IT BIGGER</string>
    <string name="capstone">Capstone: MY OWN APP</string>
</resources>
